Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15511

Problems with drawing Arabic letters on QTextLayout

    XMLWordPrintable

Details

    Description

      When using arabic fonts in a QTextLayout then the arabic characters are not drawn in the right place, this especially happens when spaces are used as part of the text.

      The example app shows the letters in a QTextLayout and the rectangle using boundingRect(), note in the case with only one character it is fine (it is rendered to the far left of the widget) in the other case it has a gap even though the string starts in the same way.

      Tested with latest 4.7.x

      Attachments

        1. app.cpp
          3 kB
        2. app.cpp
          1 kB
        3. arabic-fonts.tar.gz
          1 kB
        4. pic1.jpg
          pic1.jpg
          12 kB
        5. pic2.jpg
          pic2.jpg
          23 kB
        6. Screenshot.png
          Screenshot.png
          13 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jiang Jiang Jiang
            dohollan Dominik Holland (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes