Changes: Align the Arabic layouts in left direction

RevBy: TrustMe
Details: Temporary workaround for bug 197937/201916/QTBUG-15511.